# paperless-asn-qr-codes

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  README.md  cliff.toml  pyproject.toml  renovate.json
.forgejo/workflows/: blackbox.yaml  commitlint.yaml  lint.yaml  publish.yaml  test.yaml
.github/workflows/: lint.yaml  publish.yaml
paperless_asn_qr_codes/: LabelSheet.py  __init__.py  avery_labels.py  label.py  label_sheet.py  main.py
tests/: test_blackbox.py
