[project]
name = "paperless-asn-qr-codes"
description = "Code for generating paperless ASN labels with QR codes"
authors = [
  { name = "Jan Christian Grünhage", email = "jan.christian@gruenhage.xyz" },
  { name = "Vanessa Gaube", email = "dev@vanessagaube.de"},
]
license = "GPL-3.0"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
  "reportlab==4.4.10",
  "reportlab_qrcode==0.1.6"
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"


[project.urls]
Documentation = "https://codeberg.org/entropia/paperless-asn-qr-codes/src/branch/main#readme"
Issues = "https://codeberg.org/entropia/paperless-asn-qr-codes/issues"
Source = "https://codeberg.org/entropia/paperless-asn-qr-codes.git"

# Scripts
[project.scripts]
paperless-asn-qr-code = "paperless_asn_qr_codes.main:main"


# Dev Dependencies
[tool.uv]
dev-dependencies = [
  "ruff",
  "pylint",
]
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true, tags = true } }]

# TODO: Dev/CI scripts for lint & co.