[project]
name = "paperless-asn-qr-codes"
description = "Code for generating paperless ASN labels with QR codes"
authors = [
  { name = "Jan Christian Grünhage", email = "jan.christian@gruenhage.xyz" },
  { name = "Vanessa Gaube", email = "dev@vanessagaube.de"},
]
license = "GPL-3.0"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
  "reportlab==5.0.0",
  "reportlab_qrcode==0.1.6"
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"


[project.urls]
Documentation = "https://codeberg.org/entropia/paperless-asn-qr-codes/src/branch/main#readme"
Issues = "https://codeberg.org/entropia/paperless-asn-qr-codes/issues"
Source = "https://codeberg.org/entropia/paperless-asn-qr-codes.git"

# Scripts
[project.scripts]
paperless-asn-qr-code = "paperless_asn_qr_codes.main:main"

[dependency-groups]
dev = [
  "ruff>=0.15.13",
  "pylint>=4.0.5",
  "pytest>=9.0.3",
  "coverage>=7.14.0",
  "cli-test-helpers>=4.2.0",
  "python-magic>=0.4.27",
]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true, tags = true } }]

[tool.coverage.run]
source = ["paperless_asn_qr_codes", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D104",
    "D107",
    "D200",
    "D203",
    "D205",
    "D213",
    "D400",
    "D401",
    "D415", # TODO: Remove later
    "FIX002", # TODO: Remove later
    "TD002", # TODO: Remove later
    "TD003", # TODO: Remove later
    "ANN", # TODO: Remove later
    "COM812",
    "PLW0603", # TODO: Repository-specific ignore, remove when refactoring
    "PLW0602", # TODO: Repository-specific ignore, remove when refactoring
    "S101", # TODO: Repository-specific ignore, remove when refactoring
    "N802", # TODO: Repository-specific ignore, remove when refactoring
    "N803", # TODO: Repository-specific ignore, remove when refactoring
    "N816", # TODO: Repository-specific ignore, remove when refactoring
    "FBT002", # TODO: Repository-specific ignore, remove when refactoring
    "ERA001", # TODO: Repository-specific ignore, remove when refactoring
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["S101", "INP001", "PLR2004"]

# TODO: Dev/CI scripts for lint & co.